--- a/sielekthor/src/main/resources/templates/member-add.html
+++ b/sielekthor/src/main/resources/templates/member-add.html
@@ -1,53 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
-
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-	<title>Daftar Barang</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-	<object th:include="fragments/fragment :: css" th:remove="tag"></object>
-	<object th:include="fragments/fragment :: js" th:remove="tag"></object>
+    <title>Sielekthor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"></head>
+      <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+      <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
-
 <body>
-	<nav th:replace="fragments/fragment :: navbar('Barang')"></nav>
-	<div class="container">
-		<h2>Daftar Barang</h2>
-		<br>
-		<a th:href="@{/barang/tambah}" class="mx-2 btn bg-warning">+ Tambah Barang</a>
-		<br>
-		<div th:if="*{listBarang.size() != 0}">
-			<table class='table'>
-				<thead>
-					<tr>
-						<th>No</th>
-						<th>Nama</th>
-						<th>Harga</th>
-<!-- 						<th>Tipe</th> -->
-						<th>Stok</th>
-						<th></th>
-						<th>Aksi</th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="barang, iterationStatus : ${listBarang}" th:style="${iterationStatus.even} ? 'font-weight-bold;'">
-						<td th:text="${iterationStatus.count}"></td>
-						<td th:text="${barang.namaBarang}"></td>
-						<td th:text="${barang.hargaBarang}"></td>
-<!-- 						<td th:text="${barang.tipe}"></td> -->
-						<td th:text="${barang.stok}"></td>
-						<td> <a class="btn btn-primary" th:ref="@{/barang/} + ${barang.idBarang}">Lihat</a> </td>
-						<td> <a class="btn btn-primary" th:href="@{/barang/ubah/} + ${barang.idBarang}">Update</a> </td>
-						<td> <a class="btn btn-primary" th:href="@{/}">Delete</a> </td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-            <div th:unless="*{listBarang.size() != 0}">
-                <h2 th:text="'Tidak ada barang'"></h2>
+<nav th:replace="fragments/fragment :: navbar('Member')"></nav>
+<div class="container">
+    <div class="card m-4 p-4">
+        <div class="card-body">
+            <div class="justify-content-center">
+                <h2 th:text="'Member dengan id ' + ${idMember} + ' berhasil ditambahkan'"></h2>
+                <a class="btn btn-primary" href="/member">Kembali</a>
             </div>
         </div>
     </div>
-</body>
+</div>
 
+</body>
 </html>
