--- a/sielekthor/src/main/resources/templates/member-ubah-form.html
+++ b/sielekthor/src/main/resources/templates/member-ubah-form.html
@@ -2,52 +2,39 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 
 <head>
-	<title>Emsidi</title>
+	<title>Sielekthor</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <object th:include="fragments/fragment :: css" th:remove="tag"></object>
 <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 
 <body>
-	<nav th:replace="fragments/fragment :: navbar('Home')"></nav>
+	<nav th:replace="fragments/fragment :: navbar('Member')"></nav>
 	<div class="container">
 		<div class="card m-4 p-4">
 			<div class="card-body">
 				<div class="justify-content-center">
-					<h2>Form Ubah Barang</h2>
+					<h2>Form Ubah Member</h2>
 					<br>
-					<form th:action="@{/barang/ubah}" th:object="${barang}" method="POST">
-						<input type="hidden" th:field="*{idBarang}" />
-						<input type="hidden" th:field="*{kodeBarang}" />
-						<input type="hidden" th:field="*{merkBarang}" />
+					<form th:action="@{/member/ubah}" th:object="${member}" method="POST">
+						<input type="hidden" th:field="*{idMember}" />
+						<input type="hidden" th:field="*{jenisKelamin}" />
 
-						Nama Barang
+						Nama
 						<br>
-						<input class="form-control" type="text" name="namaBarang" th:value="*{namaBarang}" />
+						<input class="form-control" type="text" name="namaMember" th:value="*{namaMember}" />
 						<br><br>
 
-						Stok Barang
-						<br>
-                        <input class="form-control" type="text" name="stok" th:value="*{stok}" />
-						<br><br>
+                        Tanggal Lahir <br>
+                        <input class="form-control" type="date" name="tanggalLahir" th:value="*{tanggalLahir}"/>
+                        <br><br>
 
-						Garansi Toko
-						<br>
-                        <input class="form-control" type="text" name="jumlahGaransi" th:value="*{jumlahGaransi}" />
-						<br><br>
-
-						Deskripsi
-						<br>
-                        <input class="form-control" type="text" name="deskripsiBarang" th:value="*{deskripsiBarang}" />
-						<br><br>
-
-						Harga
-						<br>
-                        <input class="form-control" type="text" name="hargaBarang" th:value="*{hargaBarang}" />
-						<br><br>
+                        Tanggal Pendaftaran <br>
+                        <input class="form-control" type="date" name="tanggalPendaftaran" th:value="*{tanggalPendaftaran}"/>
+                        <br><br>
 
 						<button class="btn btn-primary" type="submit">Submit</button>
-						<a class="btn btn-primary" href="/barang">Cancel</a> </form>
+						<a class="btn btn-primary" href="/member">Cancel</a> </form>
 				</div>
 			</div>
 		</div>
